# Minecraft-Base-Finder

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.template.json  Minecraft Base Finder.sln  README.md  vcpkg.json
BaseFinderView/: BaseFinderView.cpp  BaseFinderView.h  BaseFinderView.qrc  BaseFinderView.rc  BaseFinderView.ui  BaseFinderView.vcxproj  BaseFinderView.vcxproj.filters  CMakeLists.txt  RegionTask.cpp  RegionTask.h  ZoomableGraphicsView.h  main.cpp
Minecraft Base Finder/: BlockFilter.cpp  BlockFilter.h  CMakeLists.txt  DefaultBlockFilter.txt  Log.txt  Main.cpp  MainNew.cpp  MainTesting.cpp  Minecraft Base Finder.vcxproj  Minecraft Base Finder.vcxproj.filters  Region.cpp  Region.h  TODO.txt  uncompChunkTest22.txt  uncompressedOutput.txt
